# AED1

./: CMakeLists.txt
AED-master/code/headers/: ClassUC.h  Menu.h  ScheduleManage.h  Slot.h  Student.h
AED-master/code/src/: ClassUC.cpp  Menu.cpp  ScheduleManage.cpp  Student.cpp  main.cpp
aed/code/headers/: ClassSch.h  Estudante.h  GestaoHor.h  Request.h  ScheduleManage.h  Slot.h  Student.h  TurmaHor.h  UCClass.h  UCTurma.h
aed/code/src/: ClassSch.cpp  Estudante.cpp  GestaoHor.cpp  Pedido.cpp  Request.cpp  ScheduleManage.cpp  Slot.cpp  Student.cpp  TurmaHor.cpp  UCClass.cpp  UCTurma.cpp  main.cpp
aed/code/src/AED-master/code/headers/: ScheduleManage.h
aed/code/src/AED-master/code/src/: Menu.cpp  ScheduleManage.cpp  Slot.cpp  Student.cpp
code/headers/: ClassSch.h  Request.h  ScheduleManage.h  Slot.h  Student.h  UCClass.h
code/src/: ClassSch.cpp  Request.cpp  ScheduleManage.cpp  Slot.cpp  Student.cpp  UCClass.cpp  main.cpp
projeto-aed-2022/: CMakeLists.txt
projeto-aed-2022/code/Classes/: Estudante.cpp  GestaoHor.cpp  Slot.cpp  TurmaHor.cpp  UCTurma.cpp
projeto-aed-2022/code/Headers/: Estudante.h  GestaoHor.h  Pedido.h  TurmaHor.h  UCTurma.h
untitled/code/Classes/: Estudante.cpp  GestaoHor.cpp  Pedido.cpp  Slot.cpp  TurmaHor.cpp  UCTurma.cpp
untitled/code/Headers/: Estudante.h  GestaoHor.h  Slot.h  TurmaHor.h  UCTurma.h
